--- a/manual_lazada.ipynb
+++ b/manual_lazada.ipynb
@@ -2900,7 +2900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 478,
+   "execution_count": 536,
    "metadata": {},
    "outputs": [
     {
@@ -2908,10 +2908,32 @@
      "output_type": "stream",
      "text": [
       "Processing Lazada entries...\n",
-      "URL: https://www.lazada.com.ph/shop-mobiles/?ajax=true&q=Huawei%20nova%205i\n",
-      "[INFO]: Phone Huawei nova 5i not in Lazada.\n",
-      "[INFO]: Phone Huawei nova 5i not in Lazada.\n",
-      "[INFO]: Phone Huawei nova 5i in Lazada.\n"
+      "URL: https://www.lazada.com.ph/shop-mobiles/?ajax=true&q=Samsung%20Galaxy%20S22%205G\n",
+      "[INFO]: Phone Samsung Galaxy S22 5G not in Lazada.\n",
+      "[INFO]: Phone Samsung Galaxy S22 5G not in Lazada.\n",
+      "[INFO]: Phone Samsung Galaxy S22 5G not in Lazada.\n",
+      "[INFO]: Phone Samsung Galaxy S22 5G not in Lazada.\n",
+      "[INFO]: Phone Samsung Galaxy S22 5G not in Lazada.\n",
+      "[INFO]: Phone Samsung Galaxy S22 5G not in Lazada.\n",
+      "[INFO]: Phone Samsung Galaxy S22 5G not in Lazada.\n",
+      "[INFO]: Phone Samsung Galaxy S22 5G not in Lazada.\n",
+      "[INFO]: Phone Samsung Galaxy S22 5G not in Lazada.\n",
+      "[INFO]: Phone Samsung Galaxy S22 5G not in Lazada.\n",
+      "[INFO]: Phone Samsung Galaxy S22 5G not in Lazada.\n",
+      "[INFO]: Phone Samsung Galaxy S22 5G not in Lazada.\n",
+      "[INFO]: Phone Samsung Galaxy S22 5G not in Lazada.\n",
+      "[INFO]: Phone Samsung Galaxy S22 5G not in Lazada.\n",
+      "[INFO]: Phone Samsung Galaxy S22 5G not in Lazada.\n",
+      "[INFO]: Phone Samsung Galaxy S22 5G not in Lazada.\n",
+      "[INFO]: Phone Samsung Galaxy S22 5G not in Lazada.\n",
+      "[INFO]: Phone Samsung Galaxy S22 5G not in Lazada.\n",
+      "[INFO]: Phone Samsung Galaxy S22 5G not in Lazada.\n",
+      "[INFO]: Phone Samsung Galaxy S22 5G not in Lazada.\n",
+      "[INFO]: Phone Samsung Galaxy S22 5G not in Lazada.\n",
+      "[INFO]: Phone Samsung Galaxy S22 5G not in Lazada.\n",
+      "[INFO]: Phone Samsung Galaxy S22 5G not in Lazada.\n",
+      "[INFO]: Phone Samsung Galaxy S22 5G not in Lazada.\n",
+      "[INFO]: Phone Samsung Galaxy S22 5G not in Lazada.\n"
      ]
     }
    ],
