--- a/test.ipynb
+++ b/test.ipynb
@@ -114,10 +114,87 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nearest neighbor index: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "\n",
+    "# Sample numerical data (2 samples, 3 numerical features each)\n",
+    "data = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "\n",
+    "# Normalize the data\n",
+    "normalized_data = data / np.linalg.norm(data, axis=1, keepdims=True)\n",
+    "\n",
+    "# Initialize and fit TfidfTransformer\n",
+    "tfidf_transformer = TfidfTransformer()\n",
+    "tfidf_transformer.fit(normalized_data)\n",
+    "\n",
+    "# Transform data to TF-IDF representation\n",
+    "tfidf_data = tfidf_transformer.transform(normalized_data)\n",
+    "\n",
+    "# Calculate cosine similarity\n",
+    "similarities = cosine_similarity(tfidf_data)\n",
+    "\n",
+    "# Find nearest neighbor\n",
+    "nearest_neighbor_index = np.argmax(similarities)\n",
+    "\n",
+    "print(\"Nearest neighbor index:\", nearest_neighbor_index)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.neighbors import NearestNeighbors\n",
+    "\n",
+    "\n",
+    "# combine the non numerical data into another dataframe\n",
+    "# concatenate the strings\n",
+    "\n",
+    "\n",
+    "# remove non utf-8 characters\n",
+    "def recommend(\n",
+    "        specs,\n",
+    "        n=20,\n",
+    "        k_nearest=10,\n",
+    "        **kwargs):\n",
+    "    \n",
+    "    tfidf = TfidfVectorizer(stop_words='english')\n",
+    "    X = tfidf.fit_transform(clean_data['details'].str.replace(r'[^a-zA-Z0-9_]', ' ', regex=True))\n",
+    "    # Transform the input specs using TF-IDF vectorizer\n",
+    "    specs_vectorized = tfidf.transform([specs])\n",
+    "    \n",
+    "    for k, v in kwargs.items():\n",
+    "        if k in clean_data.columns:\n",
+    "            X = hstack((X, tfidf.fit_transform(clean_data[k].astype(str).str.replace(r'[^a-zA-Z0-9_]', ' ', regex=True))))\n",
+    "            specs_vectorized = hstack((specs_vectorized, tfidf.transform([v])))\n",
+    "    \n",
+    "    # Use k-nearest neighbors algorithm\n",
+    "    nn = NearestNeighbors(n_neighbors=k_nearest)\n",
+    "    nn.fit(X)\n",
+    "    _, indices = nn.kneighbors(specs_vectorized)\n",
+    "    \n",
+    "    # Return recommended phones\n",
+    "    return clean_data.iloc[indices[0]].head(n)\n",
+    "\n",
+    "\n",
+    "# get the recommended phone\n",
+    "recommend('', brand='samsung', colors='purple', price_min='10000', k_nearest=10)[['brand', 'model', 'colors', 'price_min', 'price_max', 'release']]\n"
+   ]
   }
  ],
  "metadata": {
